US293231; Add comment to auth.html

--- a/office-loader/public/auth.html
+++ b/office-loader/public/auth.html
@@ -7,6 +7,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- NOTE: Only for testing purposes. This is a copy of the jsp file located in MicroStrategyLibrary/auth -->
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
