--- a/production/public/index.html
+++ b/production/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%">
 
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +50,7 @@
   </style>
 </head>
 
-<body>
+<body style="height: 100%;">
   <noscript>
     You need to enable JavaScript to run this Office Add-in.
   </noscript>
