Addressing issue that didn't persist all prompt answers in nested prompts...

--- a/production/public/index.html
+++ b/production/public/index.html
@@ -23,7 +23,7 @@
     -->
   <title>MicroStrategy for Office</title>
   <script>console.time('React loading time')</script>
-  <script src="../../javascript/embeddinglib.js"></script>
+  <script src="https://localhost:8443/MicroStrategyLibrary/javascript/embeddinglib.js"></script>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP|Noto+Sans+KR|Noto+Sans+SC|Noto+Sans+TC|Roboto:300,400,500&display=swap');
