Restoring HTML files, again, I shouldn't have checked in these changes...

--- a/production/public/popup.html
+++ b/production/public/popup.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>MicroStrategy for Office</title>
-  <script src="https://localhost:8443/MicroStrategyLibrary/javascript/embeddinglib.js"></script>
+  <script src="../../javascript/embeddinglib.js"></script>
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   <style>
     @import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+JP|Noto+Sans+KR|Noto+Sans+SC|Noto+Sans+TC|Roboto:300,400,500&display=swap');
